--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
     "name": "my-app",
     "version": "1.0.0",
     "scripts": {
-        "start": "http-server -p 3000"
+      "start": "http-server -p $PORT ./public"
     },
-    "devDependencies": {
-        "http-server": "^14.1.1"
+    "dependencies": {
+      "http-server": "^0.12.3"
     }
-}
+  }
+  
